syntax="proto3";

package watch2gather.proto.userinfoapi;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/Watch2Gather/server/proto/gen";

service UserInfoService {
  rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoResponse) {
    option (google.api.http) = {
      post: "/api/v1/userinfo"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get user info."
      description: "Get user info by user id."
      tags: "UserInfo"
    };
  }
}

message GetUserInfoRequest {
  string id = 1;
}

message GetUserInfoResponse {
  UserInfo User = 1;
}
message UserInfo {
  string username = 1;
  string avatar = 2;
  string id = 3;
}
